--- a/src/Zen.Z80/Zen.Z80.csproj
+++ b/src/Zen.Z80/Zen.Z80.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Processor\" />
+  </ItemGroup>
+
 </Project>
