--- a/src/Zen.Z80/Zen.Z80.csproj
+++ b/src/Zen.Z80/Zen.Z80.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Instructions\" />
+    <Folder Include="Exceptions\" />
     <Folder Include="Processor\" />
   </ItemGroup>
 
