--- a/src/Zen.Common/Zen.Common.csproj
+++ b/src/Zen.Common/Zen.Common.csproj
@@ -7,12 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Exceptions\" />
-    <Folder Include="Processor\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Zen.Common\Zen.Common.csproj" />
+    <Folder Include="Extensions\" />
   </ItemGroup>
 
 </Project>
