--- a/src/Zen.Z80.Tests.Fuse/Zen.Z80.Tests.Fuse.csproj
+++ b/src/Zen.Z80.Tests.Fuse/Zen.Z80.Tests.Fuse.csproj
@@ -12,4 +12,13 @@
     <ProjectReference Include="..\Zen.Z80\Zen.Z80.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestDefinitions\expected.fuse">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="TestDefinitions\input.fuse">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
