--- a/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
+++ b/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
@@ -26,6 +26,11 @@
     <ProjectReference Include="..\Zen.Common\Zen.Common.csproj" />
     <ProjectReference Include="..\Zen.System\Zen.System.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Update="app-settings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
     <Message Text="Restoring dotnet tools" Importance="High" />
     <Exec Command="dotnet tool restore" />
