--- a/src/Zen.Utilities/Zen.Utilities.csproj
+++ b/src/Zen.Utilities/Zen.Utilities.csproj
@@ -8,12 +8,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="NewFolder\**" />
-    <EmbeddedResource Remove="NewFolder\**" />
-    <None Remove="NewFolder\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <None Remove="Templates\InstructionTable.html" />
   </ItemGroup>
 
@@ -26,6 +20,10 @@
   <ItemGroup>
     <ProjectReference Include="..\Zen.System\Zen.System.csproj" />
     <ProjectReference Include="..\Zen.Z80\Zen.Z80.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Tools\" />
   </ItemGroup>
 
 </Project>
