--- a/src/Zen.Z80.Test.JSMoo/Zen.Z80.Test.JSMoo.csproj
+++ b/src/Zen.Z80.Test.JSMoo/Zen.Z80.Test.JSMoo.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Moq" Version="4.18.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Zen.Common\Zen.Common.csproj" />
     <ProjectReference Include="..\Zen.System\Zen.System.csproj" />
     <ProjectReference Include="..\Zen.Z80\Zen.Z80.csproj" />
