--- a/src/Zen.Utilities/Zen.Utilities.csproj
+++ b/src/Zen.Utilities/Zen.Utilities.csproj
@@ -26,4 +26,8 @@
     <Folder Include="Tools\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Moq" Version="4.18.4" />
+  </ItemGroup>
+
 </Project>
