--- a/src/Zen.System/Zen.System.csproj
+++ b/src/Zen.System/Zen.System.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Folder Include="Infrastructure\" />
     <Folder Include="Interfaces\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
