--- a/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
+++ b/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
@@ -34,6 +34,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Features\" />
     <Folder Include="Peripherals\" />
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
