Move ROM images to better location.

--- a/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
+++ b/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
@@ -35,6 +35,33 @@
     <None Update="app-settings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Rom Images\ZX Spectrum +2\image-0.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum +2\image-1.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum +3\image-0.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum +3\image-1.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum +3\image-2.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum +3\image-3.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum 128\image-0.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum 128\image-1.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Rom Images\ZX Spectrum 48K\image-0.rom">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Features\" />
