--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
-title: Zen - An Open Source C# ZX Spectrum Emulator
+title: Zen - An Open Source C# Z80/ZX Spectrum Emulator
 google_analytics: G-H7QJF2MQ5R
