--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal src/Zen.sln
     - name: Publish the package to GPR
-      run: dotnet nuget push src/Zen.Desktop.Host/bin/Release/*.nupkg
+      run: dotnet nuget push -s src/Zen.Desktop.Host/bin/Release/*.nupkg
