--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,4 +27,4 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal src/Zen.sln --configuration Release
     - name: Publish the package to GPR
-      run: dotnet nuget push src/Zen.Z80/bin/Release/*.nupkg -k oy2iw7ndvgisjg5hnkhqrrkpa5kver6ezg4frg3oujwb2a -s https://api.nuget.org/v3/index.json --skip-duplicate
+      run: dotnet nuget push src/Zen.Z80/bin/Release/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
