--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,5 +26,7 @@ jobs:
       run: dotnet build --no-restore src/Zen.sln --configuration Release
     - name: Test
       run: dotnet test --no-build --verbosity normal src/Zen.sln --configuration Release
-    - name: Publish the package to GPR
+    - name: Publish the package to NuGet
       run: dotnet nuget push src/Zen.Z80/bin/Release/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://api.nuget.org/v3/index.json --skip-duplicate
+    - name: Publish the package to GitHub
+      run: dotnet nuget push src/Zen.Z80/bin/Release/*.nupkg -k ${{secrets.NUGET_KEY}} -s https://nuget.pkg.github.com/stevehjohn/index.json --skip-duplicate
