--- a/src/Zen.Z80/Zen.Z80.csproj
+++ b/src/Zen.Z80/Zen.Z80.csproj
@@ -10,6 +10,7 @@
     <Description>A dotnet Z80 emulator implementation.</Description>
     <Copyright>MIT</Copyright>
     <RepositoryUrl>https://github.com/stevehjohn/Zen</RepositoryUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
