--- a/src/Zen.System/Zen.System.csproj
+++ b/src/Zen.System/Zen.System.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Infrastructure\" />
     <Folder Include="Interfaces\" />
     <Folder Include="ProcessorHooks\" />
   </ItemGroup>
