--- a/.github/workflows/publish-all.yml
+++ b/.github/workflows/publish-all.yml
@@ -27,5 +27,6 @@ jobs:
         files: |
           Zen.Desktop.Host.Windows.Intel.zip
           Zen.Desktop.Host.Linux.Intel.zip
+          Zen.Desktop.Host.Linux.Arm.zip
           Zen.Desktop.Host.macOS.Apple.zip
           Zen.Desktop.Host.macOS.Intel.zip
