--- a/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
+++ b/src/Zen.Desktop.Host/Zen.Desktop.Host.csproj
@@ -20,6 +20,7 @@
     <EmbeddedResource Include="Icon.ico" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
   </ItemGroup>
