--- a/src/Zen.Desktop.Host/Info.plist
+++ b/src/Zen.Desktop.Host/Info.plist
@@ -5,9 +5,9 @@
         <key>CFBundleDevelopmentRegion</key>
         <string>en</string>
         <key>CFBundleExecutable</key>
-        <string>Zen</string>
+        <string>Zen.Desktop.Host</string>
         <key>CFBundleIconFile</key>
-        <string>Icon.bmp</string>
+        <string>icon</string>
         <key>CFBundleIdentifier</key>
         <string>com.outsidecontextproblem.Zen</string>
         <key>CFBundleInfoDictionaryVersion</key>
