--- a/src/Zen.Desktop.Host/Info.plist
+++ b/src/Zen.Desktop.Host/Info.plist
@@ -27,7 +27,7 @@
         <key>LSMinimumSystemVersion</key>
         <string>10.13</string>
         <key>NSHumanReadableCopyright</key>
-        <string>Copyright © 2024</string>
+        <string>Copyright Outside Context Problem © 2024</string>
         <key>NSPrincipalClass</key>
         <string>NSApplication</string>
     </dict>
