--- a/.github/workflows/publish-all.yml
+++ b/.github/workflows/publish-all.yml
@@ -21,6 +21,8 @@ jobs:
         dotnet-version: 8.0.x
     - name: Publish and Zip all.
       run: ./publish.sh
+    - name: Create macOS apps.
+      run: ./publish-app.sh
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
@@ -30,3 +32,5 @@ jobs:
           Zen.Desktop.Host.Linux.Arm.zip
           Zen.Desktop.Host.macOS.Apple.zip
           Zen.Desktop.Host.macOS.Intel.zip
+          Zen.App.Intel.zip
+          Zen.App.AppleSilicon.zip
