--- a/src/Zen.System/Zen.System.csproj
+++ b/src/Zen.System/Zen.System.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bufdio" Version="0.1.0" />
     <PackageReference Include="radio42.Bass.Net.core" Version="2.4.17.5" />
   </ItemGroup>
 
