--- a/src/Zen.Z80.Test.JSMoo/Zen.Z80.Test.JSMoo.csproj
+++ b/src/Zen.Z80.Test.JSMoo/Zen.Z80.Test.JSMoo.csproj
@@ -1,10 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <OutputType>Exe</OutputType>
+    <LangVersion>14</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
