--- a/src/Zen.Z80.Tests/Zen.Z80.Tests.csproj
+++ b/src/Zen.Z80.Tests/Zen.Z80.Tests.csproj
@@ -1,12 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <LangVersion>14</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
