--- a/src/Zen.Z80/Zen.Z80.csproj
+++ b/src/Zen.Z80/Zen.Z80.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -11,6 +11,7 @@
     <Copyright>MIT</Copyright>
     <RepositoryUrl>https://github.com/stevehjohn/Zen</RepositoryUrl>
     <Version>1.2.0</Version>
+    <LangVersion>14</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
